kube-config/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: europe-west1-docker.pkg.dev/cats-breeds-classifier/cats-classifier/cats-classifier-backend:001
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.5"
        ports:
        - containerPort: 8000
