kube-config/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: cats-classifier-frontend:001
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.5"
        ports:
        - containerPort: 8501
