kube-config/model-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: model
spec:
  selector:
    app: model
  ports:
  - port: 8500
    targetPort: 8500
